[gd_scene load_steps=23 format=2]

[ext_resource path="res://Assets/fonts/cmu-typewriter/Typewriter.tres" type="DynamicFont" id=1]
[ext_resource path="res://ContainerScenes/HUD.gd" type="Script" id=2]
[ext_resource path="res://Assets/Sprites/score_timer_GUI.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sprites/time.png" type="Texture" id=4]
[ext_resource path="res://Assets/theme.tres" type="Theme" id=5]
[ext_resource path="res://addons/gd-achievements/scripts/achievement_notifications.gd" type="Script" id=6]
[ext_resource path="res://Assets/Sounds/wilhelm.wav" type="AudioStream" id=7]
[ext_resource path="res://Assets/Sprites/right_side_GUI.png" type="Texture" id=8]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.152941, 0.105882, 0.105882, 1 )
border_width_top = 1
border_color = Color( 0.329412, 0.121569, 0.266667, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.180392, 0.12549, 0.196078, 1 )

[sub_resource type="Shader" id=14]
code = "shader_type canvas_item;

render_mode blend_mix;
uniform vec4 modulate: hint_color;
uniform bool active;
uniform float time_scale = 20;


void fragment() {
	if (cos(TIME * time_scale) > 0.0) {
		COLOR = vec4(modulate.rgb,  texture(TEXTURE, UV).a * modulate.a);
	} else {
		COLOR = vec4(COLOR.rgb, texture(TEXTURE, UV).a * modulate.a);
	}
}
"

[sub_resource type="ShaderMaterial" id=15]
shader = SubResource( 14 )
shader_param/modulate = Color( 1, 1, 1, 1 )
shader_param/active = null
shader_param/time_scale = 10.0

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 8 )
region = Rect2( 27, 208, 282, 38 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 8 )
region = Rect2( 433, 200, 282, 36 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 8 )
region = Rect2( 24, 251, 78, 40 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 8 )
region = Rect2( 431, 250, 76, 37 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 8 )
region = Rect2( 24, 251, 62, 40 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 8 )
region = Rect2( 431, 250, 62, 37 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 8 )
region = Rect2( 28, 326, 282, 33 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 8 )
region = Rect2( 433, 318, 282, 33 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 8 )
region = Rect2( 32, 13, 292, 121 )

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0, 0, 0, 0.384314 )

[node name="HUD" type="CanvasLayer" groups=["scene_manager_entity_nodes"]]
pause_mode = 2
script = ExtResource( 2 )
__meta__ = {
"entity_name": "HUD"
}

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="ScorePanel" type="Panel" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 864.0
margin_top = 48.0
margin_bottom = -472.0
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="ScorePanel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 1 )
text = "Score
"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimePanel" type="Panel" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 864.0
margin_bottom = -552.0
custom_styles/panel = SubResource( 4 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Clock" type="TextureRect" parent="TimePanel"]
margin_left = 8.0
margin_top = 8.0
margin_right = 41.0
margin_bottom = 41.0
texture = ExtResource( 4 )

[node name="Time" type="Label" parent="TimePanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 48.0
custom_fonts/font = ExtResource( 1 )
text = "00:00"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NotEnoughMana" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -104.0
margin_top = -172.5
margin_right = 104.0
margin_bottom = -141.5
custom_fonts/font = ExtResource( 1 )
text = "Not Enough Magic"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShieldOverloading" type="Label" parent="."]
visible = false
material = SubResource( 15 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -117.0
margin_top = -200.5
margin_right = 117.0
margin_bottom = -169.5
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_fonts/font = ExtResource( 1 )
text = "Shield Overloading"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TutorialMessage" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -250.0
margin_right = 512.0
margin_bottom = -219.0
custom_fonts/font = ExtResource( 1 )
text = "Press [Space] to jump"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HPMPControl" type="Control" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -291.0
margin_bottom = 121.0
size_flags_horizontal = 3
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="HealthBar" type="TextureProgress" parent="HPMPControl"]
margin_left = 4.80157
margin_top = 5.19843
margin_right = 286.802
margin_bottom = 53.1984
value = 40.0
texture_under = SubResource( 19 )
texture_progress = SubResource( 20 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="HPMPControl"]
margin_left = 1.85406
margin_top = 41.0542
margin_right = 290.854
margin_bottom = 81.0542
color = Color( 0.196078, 0.235294, 0.223529, 0.776471 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ManaBars" type="Control" parent="HPMPControl"]
margin_top = 43.0
margin_right = 290.0
margin_bottom = 83.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MP1" type="TextureProgress" parent="HPMPControl/ManaBars"]
margin_left = 1.336
margin_right = 79.336
margin_bottom = 40.0
max_value = 118.0
value = 100.0
texture_under = SubResource( 21 )
texture_progress = SubResource( 22 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MP2" type="TextureProgress" parent="HPMPControl/ManaBars"]
margin_left = 75.115
margin_right = 153.115
margin_bottom = 40.0
max_value = 118.0
value = 100.0
texture_under = SubResource( 21 )
texture_progress = SubResource( 22 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MP3" type="TextureProgress" parent="HPMPControl/ManaBars"]
margin_left = 149.06
margin_right = 227.06
margin_bottom = 40.0
max_value = 118.0
value = 100.0
texture_under = SubResource( 21 )
texture_progress = SubResource( 22 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MP4" type="TextureProgress" parent="HPMPControl/ManaBars"]
margin_left = 224.426
margin_top = -0.315308
margin_right = 286.426
margin_bottom = 39.6847
value = 100.0
texture_under = SubResource( 23 )
texture_progress = SubResource( 26 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShieldOverload" type="TextureProgress" parent="HPMPControl"]
margin_left = 5.19545
margin_top = 83.2227
margin_right = 287.195
margin_bottom = 116.223
step = 0.2
texture_under = SubResource( 24 )
texture_progress = SubResource( 25 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Frame" type="TextureRect" parent="HPMPControl"]
margin_right = 292.0
margin_bottom = 121.0
texture = SubResource( 18 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreTimePanel" type="TextureRect" parent="."]
margin_right = 281.0
margin_bottom = 73.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="ScoreTimePanel"]
margin_left = 190.664
margin_top = 32.0
margin_right = 269.664
margin_bottom = 63.0
custom_fonts/font = ExtResource( 1 )
text = "99,999"
clip_text = true

[node name="Time" type="Label" parent="ScoreTimePanel"]
margin_left = 52.0
margin_top = 31.0
margin_right = 128.0
margin_bottom = 62.0
custom_fonts/font = ExtResource( 1 )
text = "0:00"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeathMenu" type="CenterContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SubmittingLabel" type="Label" parent="DeathMenu"]
visible = false
margin_left = 260.0
margin_top = 274.0
margin_right = 764.0
margin_bottom = 326.0
text = "Submitting your score..."

[node name="PreSubmitMenu" type="VBoxContainer" parent="DeathMenu"]
visible = false
margin_left = 155.0
margin_top = 130.0
margin_right = 869.0
margin_bottom = 470.0
custom_constants/separation = 20

[node name="DeathMsg" type="Label" parent="DeathMenu/PreSubmitMenu"]
margin_right = 714.0
margin_bottom = 52.0
text = "You are Dead."
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="DeathMenu/PreSubmitMenu"]
margin_top = 72.0
margin_right = 714.0
margin_bottom = 124.0
text = "Score: 0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InstructionsMsg" type="Label" parent="DeathMenu/PreSubmitMenu"]
margin_top = 144.0
margin_right = 714.0
margin_bottom = 196.0
text = "Enter your name to post your score"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameInput" type="LineEdit" parent="DeathMenu/PreSubmitMenu"]
margin_top = 216.0
margin_right = 714.0
margin_bottom = 268.0
mouse_filter = 2
text = "Filthy Scum"
align = 1
max_length = 20

[node name="HBoxContainer" type="HBoxContainer" parent="DeathMenu/PreSubmitMenu"]
margin_top = 288.0
margin_right = 714.0
margin_bottom = 340.0
custom_constants/separation = 20

[node name="Submit" type="Button" parent="DeathMenu/PreSubmitMenu/HBoxContainer"]
margin_right = 366.0
margin_bottom = 52.0
mouse_filter = 2
size_flags_horizontal = 3
text = "Submit"

[node name="Quit" type="Button" parent="DeathMenu/PreSubmitMenu/HBoxContainer"]
margin_left = 386.0
margin_right = 714.0
margin_bottom = 52.0
mouse_filter = 2
size_flags_horizontal = 3
text = "Skip"

[node name="PostSubmitMenu" type="VBoxContainer" parent="DeathMenu"]
visible = false
margin_left = 192.0
margin_top = 233.0
margin_right = 831.0
margin_bottom = 367.0
custom_constants/separation = 30

[node name="Label" type="Label" parent="DeathMenu/PostSubmitMenu"]
margin_right = 639.0
margin_bottom = 52.0
text = "Submitted your score!"

[node name="Quit" type="Button" parent="DeathMenu/PostSubmitMenu"]
margin_top = 82.0
margin_right = 639.0
margin_bottom = 134.0
text = "Return to main menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TutorialDeathMenu" type="VBoxContainer" parent="DeathMenu"]
visible = false
margin_left = 150.0
margin_top = 228.0
margin_right = 873.0
margin_bottom = 372.0
custom_constants/separation = 40

[node name="Label" type="Label" parent="DeathMenu/TutorialDeathMenu"]
margin_right = 531.0
margin_bottom = 52.0
text = "You are dead."
align = 1

[node name="RestartFromCheckpoint" type="Button" parent="DeathMenu/TutorialDeathMenu"]
margin_top = 92.0
margin_right = 531.0
margin_bottom = 144.0
mouse_filter = 2
text = "Restart from checkpoint"

[node name="PauseMenu" type="PanelContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 5 )
custom_styles/panel = SubResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="PauseMenu"]
margin_right = 1024.0
margin_bottom = 600.0
custom_constants/margin_right = 150
custom_constants/margin_top = 50
custom_constants/margin_left = 150
custom_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu/MarginContainer"]
margin_left = 150.0
margin_top = 50.0
margin_right = 874.0
margin_bottom = 550.0
custom_constants/separation = 50

[node name="Paused" type="Label" parent="PauseMenu/MarginContainer/VBoxContainer"]
pause_mode = 2
margin_top = 122.0
margin_right = 724.0
margin_bottom = 174.0
size_flags_vertical = 6
text = "Paused"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Return" type="Button" parent="PauseMenu/MarginContainer/VBoxContainer"]
margin_top = 346.0
margin_right = 724.0
margin_bottom = 398.0
text = "Return to game"

[node name="Quit" type="Button" parent="PauseMenu/MarginContainer/VBoxContainer"]
margin_top = 448.0
margin_right = 724.0
margin_bottom = 500.0
text = "Quit to main menu"

[node name="AchievementNotifications" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}
global_sound = ExtResource( 7 )
grow_direction = 0
position = 2

[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
[connection signal="pressed" from="DeathMenu/PreSubmitMenu/HBoxContainer/Submit" to="." method="_on_Submit_pressed"]
[connection signal="pressed" from="DeathMenu/PreSubmitMenu/HBoxContainer/Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="DeathMenu/PostSubmitMenu/Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="DeathMenu/TutorialDeathMenu/RestartFromCheckpoint" to="." method="_on_RestartFromCheckpoint_pressed"]
[connection signal="pressed" from="PauseMenu/MarginContainer/VBoxContainer/Return" to="." method="_on_Return_pressed"]
[connection signal="pressed" from="PauseMenu/MarginContainer/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
